--- a/website/templates/includes/navbar.html
+++ b/website/templates/includes/navbar.html
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url "okx" %}">OKX</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Copy Traders</a>
+          </li>
         </ul>
         <div class="ms-auto">
         <ul class="navbar-nav">
