user subscribe and unsubscribe jobs compleated

--- a/website/templates/includes/navbar.html
+++ b/website/templates/includes/navbar.html
@@ -19,7 +19,7 @@
             <a class="nav-link" href="{% url "okx" %}">OKX</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Copy Traders</a>
+            <a class="nav-link" href="{% url "copy_trader_list" %}">Copy Traders</a>
           </li>
         </ul>
         <div class="ms-auto">
