--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -97,12 +97,12 @@
                       {% if user.is_copy_trader %}
                         <td>Copy Trader</td>
                         <td>
-                          <a href="{% url "copy_trade" user.id %}" class="btn btn-md btn-success float-end me-2 ms-2">Deactivate</a>
+                          <a href="{% url "copy_trader" user.id %}" class="btn btn-md btn-success float-end me-2 ms-2">Deactivate</a>
                         </td>
                       {% else %}
                         <td>Not a Copy Trader</td>
                         <td>
-                          <a href="{% url "copy_trade" user.id %}" class="btn btn-md btn-success float-end me-2 ms-2">Activate</a>
+                          <a href="{% url "copy_trader" user.id %}" class="btn btn-md btn-success float-end me-2 ms-2">Activate</a>
                         </td>
                       {% endif %}
                     </tr>
